# table-engine

./: .flake8  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py
core/: CMakeLists.txt
core/antlr4/: .gitignore  CMakeLists.txt  README.md
core/antlr4/cmake/: FindANTLR.cmake  README.md
core/antlr4/demo/: README.md
core/antlr4/runtime/: CMakeLists.txt
core/antlr4/runtime/src/: antlr4-common.h
core/antlr4/runtime/src/atn/: ATNState.h  LL1Analyzer.h
core/antlr4/runtime/src/tree/xpath/: XPath.cpp  XPathLexer.cpp  XPathLexer.h
core/grammars/: CalcValue.g4
core/include/: Table.h  TreeNode.h  VisitorCalcValue.h  engine.h  exception_collection.h
core/include/converters/: DictToMap.h  DictToMapDynamicValue.h  DictToMapMap.h  DictToTreeNode.h  ListToVector.h  ListToVectorDynamicValue.h  RegisterException.h  ToDynamicValue.h
core/include/gen_calc_value/: CalcValue.interp  CalcValueBaseVisitor.h  CalcValueLexer.h  CalcValueLexer.interp  CalcValueLexer.tokens  CalcValueParser.h  CalcValueVisitor.h
core/src/: Table.cpp  TreeNode.cpp  engine.cpp
core/src/VisitorCalcValue/: VisitorExpr.cpp  VisitorFuncDateTime.cpp  VisitorFuncExpr.cpp  VisitorFuncLogical.cpp
core/src/gen_calc_value/: CalcValueBaseVisitor.cpp  CalcValueLexer.cpp  CalcValueParser.cpp  CalcValueVisitor.cpp
core/test/: tests.cpp
postgresql-9.6-extension/: CMakeLists.txt  table_engine_db--0.0.1.sql  table_engine_db.control  table_engine_db.cpp
postgresql-9.6-extension/expected/: table_engine_db_test.out
postgresql-9.6-extension/sql/: table_engine_db_test.sql
table_engine/: __init__.py  exceptions.py
table_engine/libs/: __init__.py
test/: data.py  tests.py
